--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [raspberry-gateway]
-#10.0.60.28 ansible_user=pi
+#10.0.60.28 ansible_user=admin
 
 # Comment out the previous line and uncomment this to run inside Rasberry Pi.
-127.0.0.1 ansible_connection=local ansible_user=pi
+127.0.0.1 ansible_connection=local ansible_user=admin
