Debian Bookworm support

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -47,11 +47,16 @@
     state: present
   when: ansible_facts.os_family == "Archlinux"
 
-- name: Install Docker Compose using Pip.
-  ansible.builtin.pip:
+#- name: Install Docker Compose using Pip.
+#  ansible.builtin.pip:
+#    name: docker-compose
+#    state: present
+#    executable: pip3
+
+- name: Install Docker Compose
+  ansible.builtin.apt:
     name: docker-compose
     state: present
-    executable: pip3
 
 - name: Ensure {{ ansible_user }} user is added to the docker group.
   ansible.builtin.user:
