+ EASYRSA options via config file

--- a/openvpn/config/server.conf
+++ b/openvpn/config/server.conf
@@ -42,4 +42,4 @@ status /var/log/openvpn/openvpn-status.log
 explicit-exit-notify 1
 crl-verify pki/crl.pem
 
-#Default Raspberry-Gateway configuration file
+#Default openvpn-aws configuration file
