--- a/example.config.yml
+++ b/example.config.yml
@@ -20,6 +20,7 @@ easyrsa_req_city: "Kyiv"                        # The city of the organization.
 easyrsa_req_org: "Sweet Home"                   # The name of the organization.
 easyrsa_req_email: "sweet@home.net"             # The email address of the organization.
 easyrsa_req_ou: "My Organizational Unit"        # The name of the organizational unit.
+easyrsa_req_cn: "server"                        # The name of the common name.
 easyrsa_key_size: 2048                          # Leave this as-is. Size in bits for your keypairs. The recommended value is 2048. up to 4096.
 easyrsa_ca_expire: 3650                         # Number of days until the root CA expires.
 easyrsa_cert_expire: 825                        # Number of days until certificates expire.
