--- a/example.config.yml
+++ b/example.config.yml
@@ -26,3 +26,6 @@ easyrsa_ca_expire: 3650                         # Number of days until the root 
 easyrsa_cert_expire: 825                        # Number of days until certificates expire.
 easyrsa_cert_renew: 30                          # Number of days before expiration to automatically renew certificates.
 easyrsa_crl_days: 180                           # Number of days until the CRL expires.
+
+# OpenVPN monitoring configuration.             # Requires `monitoring_enable`
+openvpn_exporter_enable: false                  # Not functional yet, but in roadmap.
