--- a/tasks/openvpn_exporter.yml
+++ b/tasks/openvpn_exporter.yml
@@ -1,15 +1,15 @@
 ---
 - name: Copy OpenVPN dashboard configs to Grafana.
   ansible.builtin.copy:
-    src: templates/openvpn_exporter.json.j2
-    dest: "{{ config_dir }}/raspi-monitoring/grafana/provisioning/dashboards/openvpn.json"
+    src: templates/openvpn-dashboard.json.j2
+    dest: "{{ config_dir }}/monitoring/grafana/provisioning/dashboards/openvpn.json"
     mode: '0644'
   become: false
-  notify: Restart raspi-monitoring
+  notify: Restart monitoring
 
 - name: Create OpenVPN exporter folder on Pi.
   ansible.builtin.file:
-    path: "{{ config_dir }}/openvpn/openvpn_exporter"
+    path: "{{ config_dir }}/openvpn-server/openvpn_exporter"
     state: directory
     mode: 0755
   become: false
@@ -17,15 +17,13 @@
 - name: Copy OpenVPN exporter template to Pi.
   ansible.builtin.template:
     src: templates/openvpn_exporter.yml.j2
-    dest: "{{ config_dir }}/openvpn/openvpn_exporter/docker-compose.yml"
+    dest: "{{ config_dir }}/openvpn-server/openvpn_exporter/docker-compose.yml"
     mode: '0640'
   become: false
-  notify: Restart raspi-monitoring
+  notify: Restart monitoring
 
-# TODO: The first time this playbook is run, the `pi` user may not be added
-# to the `docker` group, so this task may fail.
 - name: Ensure OpenVPN Exporter is running.
   community.docker.docker_compose:
-    project_src: "{{ config_dir }}/openvpn/openvpn_exporter/"
+    project_src: "{{ config_dir }}/openvpn-server/openvpn_exporter/"
     build: false
   become: false
