--- a/example.config.yml
+++ b/example.config.yml
@@ -10,16 +10,16 @@ ovpnui_password: "gagaZush"                     # !Change this password!
 ovpn_trusted_subnet: "10.0.70.0/24"             # Trusted users subnet
 ovpn_guest_subnet: "10.0.71.0/24"               # Guest users subnet
 ovpn_home_subnet: "192.168.88.0/24"             # Your home network subnet
-ovpn_remote: "remote 123.124.125.126 1194 udp"  # OpenVPN client.ovpn profile connect line
+ovpn_remote: "remote 123.124.125.126 1194 udp"  # OpenVPN client.ovpn profile connect line. You can set or change this via OpenVPN-UI.
 
 # EasyRSA configuration parameters.
 easyrsa_dn: "org"                               # Leave this as-is. "org" for traditional, "cn_only" for CN only.
 easyrsa_req_country: "UA"                       # The two-letter country code (e.g. US).
 easyrsa_req_province: "KY"                      # The two-letter state or province code (e.g. CA).
 easyrsa_req_city: "Kyiv"                        # The city of the organization.
-easyrsa_req_org: "SweetHome"                   # The name of the organization.
+easyrsa_req_org: "SweetHome"                    # The name of the organization.
 easyrsa_req_email: "sweet@home.net"             # The email address of the organization.
-easyrsa_req_ou: "MyOrganizationalUnit"        # The name of the organizational unit.
+easyrsa_req_ou: "MyOrganizationalUnit"          # The name of the organizational unit.
 easyrsa_req_cn: "server"                        # The name of the common name.
 easyrsa_key_size: 2048                          # Leave this as-is. Size in bits for your keypairs. The recommended value is 2048. up to 4096.
 easyrsa_ca_expire: 3650                         # Number of days until the root CA expires.
