--- a/openvpn-server/config/server.conf
+++ b/openvpn-server/config/server.conf
@@ -9,7 +9,8 @@ ca pki/ca.crt
 cert pki/issued/server.crt
 key pki/private/server.key
 
-cipher AES-256-CBC
+# cipher AES-256-CBC  # Deprecated since v.0.3. we are using GCM now.
+cipher AES-256-GCM
 auth SHA512
 dh pki/dh.pem
 
@@ -33,7 +34,8 @@ topology subnet
 client-config-dir /etc/openvpn/staticclients
 push "redirect-gateway def1 bypass-dhcp"
 
-ncp-ciphers AES-256-GCM:AES-192-GCM:AES-128-GCM
+#ncp-ciphers AES-256-GCM:AES-192-GCM:AES-128-GCM   # Deprecated since v.0.3. we have to use data-ciphers below instead
+data-ciphers AES-256-GCM:AES-192-GCM:AES-128-GCM
 
 user nobody
 group nogroup
@@ -42,4 +44,8 @@ status /var/log/openvpn/openvpn-status.log
 explicit-exit-notify 1
 crl-verify pki/crl.pem
 
-#Default openvpn-aws configuration file
+# 2FA Auth part
+# script-security 2
+# auth-user-pass-verify /opt/app/bin/oath.sh via-file
+
+# Default openvpn-server configuration file
