--- a/example.config.yml
+++ b/example.config.yml
@@ -28,4 +28,8 @@ easyrsa_cert_renew: 30                          # Number of days before expirati
 easyrsa_crl_days: 180                           # Number of days until the CRL expires.
 
 # OpenVPN monitoring configuration.             # Requires `monitoring_enable`
-openvpn_exporter_enable: false                  # Not functional yet, but in roadmap.
+monitoring_enable: true                          # Set true to enable base Raspberry monitoring
+monitoring_grafana_admin_password: "admin"       # Is only used the first time when Grafana starts up
+monitoring_days_keep_interval: 90d               # How long to keep data in Prometheus DB (decrease if you have less than 5Gb of free disk space)
+monitoring_speedtest_interval: 60m               # How often to run speedtest (don't change without purpose)
+monitoring_ping_interval: 30s                    # How often to ping hosts (don't change without purpose)
