--- a/tasks/openvpn_monitoring.yml
+++ b/tasks/openvpn_monitoring.yml
@@ -47,7 +47,7 @@
     dest: "{{ config_dir }}/monitoring/grafana/provisioning/dashboards/openvpn.json"
     mode: '0644'
   become: false
-  notify: Restart raspi-monitoring
+  notify: Restart monitoring
   when: monitoring_enable
 
 # WA for 60sec TMO bug
