--- a/openvpn-server/config/server.conf
+++ b/openvpn-server/config/server.conf
@@ -40,6 +40,7 @@ data-ciphers AES-256-GCM:AES-192-GCM:AES-128-GCM
 user nobody
 group nogroup
 
+status-version 2
 status /var/log/openvpn/openvpn-status.log
 explicit-exit-notify 1
 crl-verify pki/crl.pem
