--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -35,7 +35,15 @@
 # TODO: The first time this playbook is run, the `pi` user may not be added
 # to the `docker` group, so this task may fail.
 - name: Ensure OpenVPN is running.
+  community.docker.docker_compose_v2:
+    project_src: "{{ config_dir }}/openvpn-server/"
+    build: false
+  become: false
+  when: ansible_distribution == "Ubuntu"
+
+  - name: Ensure OpenVPN is running.
   community.docker.docker_compose:
     project_src: "{{ config_dir }}/openvpn-server/"
     build: false
   become: false
+  when: ansible_distribution != "Ubuntu"
