--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -34,14 +34,14 @@
 
 # TODO: The first time this playbook is run, the `pi` user may not be added
 # to the `docker` group, so this task may fail.
-- name: Ensure OpenVPN is running.
+- name: Ensure OpenVPN is running (Ubuntu).
   community.docker.docker_compose_v2:
     project_src: "{{ config_dir }}/openvpn-server/"
-    build: false
+    build: never
   become: false
   when: ansible_distribution == "Ubuntu"
 
-  - name: Ensure OpenVPN is running.
+- name: Ensure OpenVPN is running (Debian and Arch).
   community.docker.docker_compose:
     project_src: "{{ config_dir }}/openvpn-server/"
     build: false
