--- a/tasks/handlers.yml
+++ b/tasks/handlers.yml
@@ -5,6 +5,7 @@
     build: false
     restarted: true
   become: false
+  when: ansible_distribution != "Ubuntu"
 
 - name: Restart monitoring
   community.docker.docker_compose:
@@ -12,3 +13,20 @@
     build: false
     restarted: true
   become: false
+  when: ansible_distribution != "Ubuntu"
+
+- name: Restart openvpn (Ubuntu)
+  community.docker.docker_compose_v2:
+    project_src: "{{ config_dir }}/openvpn-server/"
+    build: never
+    restarted: true
+  become: false
+  when: ansible_distribution == "Ubuntu"
+
+- name: Restart monitoring (Ubuntu)
+  community.docker.docker_compose_v2:
+    project_src: "{{ config_dir }}/monitoring/"
+    build: false
+    restarted: true
+  become: false
+  when: ansible_distribution == "Ubuntu"
