--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -30,7 +30,9 @@
     - src: easy-rsa.vars.j2
       dest: config/easy-rsa.vars
   become: false
-  notify: Restart openvpn
+  notify:
+    - Restart openvpn when ansible_distribution != "Ubuntu"
+    - Restart openvpn (Ubuntu) when ansible_distribution == "Ubuntu"
 
 # TODO: The first time this playbook is run, the `pi` user may not be added
 # to the `docker` group, so this task may fail.
