--- a/tasks/handlers.yml
+++ b/tasks/handlers.yml
@@ -26,7 +26,7 @@
 - name: Restart monitoring (Ubuntu)
   community.docker.docker_compose_v2:
     project_src: "{{ config_dir }}/monitoring/"
-    build: false
+    build: never
     restarted: true
   become: false
   when: ansible_distribution == "Ubuntu"
