--- a/tasks/openvpn_ubuntu.yml
+++ b/tasks/openvpn_ubuntu.yml
@@ -31,14 +31,13 @@
       dest: config/easy-rsa.vars
   become: false
   notify:
-    - Restart openvpn when ansible_distribution != "Ubuntu"
+    - Restart openvpn (Ubuntu)
 
 # TODO: The first time this playbook is run, the `pi` user may not be added
 # to the `docker` group, so this task may fail.
-- name: Ensure OpenVPN is running.
-  community.docker.docker_compose:
+- name: Ensure OpenVPN is running (Ubuntu).
+  community.docker.docker_compose_v2:
     project_src: "{{ config_dir }}/openvpn-server/"
-    build: false
+    build: never
   become: false
-  when: ansible_distribution != "Ubuntu"
-
+  when: ansible_distribution == "Ubuntu"
