--- a/tasks/openvpn_monitoring_ubuntu.yml
+++ b/tasks/openvpn_monitoring_ubuntu.yml
@@ -61,7 +61,7 @@
 - name: Ensure monitoring environment is running.
   community.docker.docker_compose_v2:
     project_src: "{{ config_dir }}/monitoring/"
-    build: false
+    build: never
   become: false
   environment:
     DOCKER_CLIENT_TIMEOUT: '180'
