--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -34,6 +34,8 @@
       - libssl-dev
       - python3-dev
       - python3-pip
+      - python3-docker
+      - docker-compose
       - git
     state: present
   when: ansible_facts.os_family == "Debian"
@@ -45,6 +47,8 @@
       - openssl
       - base-devel
       - python-pip
+      - python3-docker
+      - docker-compose
       - git
     state: present
   when: ansible_facts.os_family == "Archlinux"
