--- a/tasks/openvpn_ubuntu.yml
+++ b/tasks/openvpn_ubuntu.yml
@@ -31,7 +31,8 @@
       dest: config/easy-rsa.vars
   become: false
   notify:
-    - Restart openvpn (Ubuntu) when ansible_distribution == "Ubuntu"
+    - Restart openvpn (Ubuntu) 
+  when: ansible_distribution == "Ubuntu"
 
 # TODO: The first time this playbook is run, the `pi` user may not be added
 # to the `docker` group, so this task may fail.
